<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F5F6FA">

    <!-- HEADER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#173A6A"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp">

        <TextView
            android:text="Tambah Task"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <!-- CONTENT -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">

            <!-- CARD -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_card"
                android:padding="16dp"
                android:orientation="vertical">

                <!-- 1. JUDUL -->
                <TextView
                    style="@style/label"
                    android:text="1. Judul Task *"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/inputBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:hint="@string/hint_judul"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!-- 2. PROJECT -->
                <TextView style="@style/label"
                    android:text="2. Project *"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/inputBoxDropdown"
                    app:startIconDrawable="@drawable/ic_building"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/spProject"
                        android:hint="@string/hint_project"
                        android:contentDescription="@string/hint_project"
                        android:focusable="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!-- 3. JENIS -->
                <TextView style="@style/label"
                    android:text="3. Jenis Maintenance *"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/inputBoxDropdown"
                    app:startIconDrawable="@drawable/ic_tools"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/spJenis"
                        android:hint="@string/hint_jenis"
                        android:contentDescription="@string/hint_jenis"
                        android:focusable="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!-- 4. PIC -->
                <TextView
                    style="@style/label"
                    android:text="4. PIC / Teknisi *"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/inputBox"
                    app:startIconDrawable="@drawable/ic_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/spPic"
                        android:hint="@string/hint_pic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:completionThreshold="1"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!-- 5. PRIORITY -->
                <TextView style="@style/label" android:text="5. Priority *"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/inputBoxDropdown"
                    app:startIconDrawable="@drawable/ic_flag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/spPriority"
                        android:hint="@string/hint_priority"
                        android:contentDescription="@string/hint_priority"
                        android:focusable="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!-- 6. TANGGAL MULAI -->
                <TextView style="@style/label" android:text="6. Tanggal Mulai *"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/inputBox"
                    app:startIconDrawable="@drawable/ic_calendar"
                    app:endIconDrawable="@drawable/ic_calendar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etMulai"
                        android:hint="@string/hint_mulai"
                        android:inputType="none"
                        android:focusable="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!-- 7. DUE DATE -->
                <TextView style="@style/label" android:text="7. Due Date *"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/inputBox"
                    app:startIconDrawable="@drawable/ic_calendar"
                    app:endIconDrawable="@drawable/ic_calendar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etDue"
                        android:hint="@string/hint_due"
                        android:inputType="none"
                        android:focusable="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!-- 8. DESKRIPSI -->
                <TextView style="@style/label"
                    android:text="8. Deskripsi *"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <com.google.android.material.textfield.TextInputLayout style="@style/inputBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:hint="@string/hint_deskripsi"
                        android:minLines="3"
                        android:gravity="top"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!-- FOTO BEFORE -->
                <TextView style="@style/label" android:text="9. Lampiran Foto Before *"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:text="+ Foto"
                        android:id="@+id/btnFotoBefore"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"/>
                </LinearLayout>

                <!-- FOTO AFTER -->
                <TextView style="@style/label" android:text="10. Lampiran Foto After *"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:text="+ Foto"
                    android:id="@+id/btnFotoAfter"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>

                <!-- BUTTON -->
                <Button
                    android:id="@+id/btnSimpan"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="Simpan Task"
                    android:backgroundTint="#173A6A"
                    android:textColor="#FFFFFF"
                    android:layout_marginTop="16dp"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>